--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,4 @@
-#enlace {
-  background-color: #F7E4E3;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  padding: 0.5rem;
-  height: 100%;
-  font-size: 1.2rem;
-  font-weight: 600;
-}
-#enlace img {
-  width: 3rem;
-}
-
-.izquierda {
-  flex-direction: row-reverse;
-  border-radius: 1rem 0 0 1rem;
-}
-
-.derecha {
-  border-radius: 0 1rem 1rem 0;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  color: #7a4d4c;
-}
-
-body {
-  background-color: #BF0606;
-  width: 100vw;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Gruppo&display=swap");
 header {
   width: 100%;
   height: 6.5rem;
@@ -48,6 +14,37 @@ header img {
   border-radius: 50%;
   left: 50%;
   transform: translateX(-50%);
+  box-shadow: 0px 0px 30px 10px #7a4d4c;
+}
+
+#enlace {
+  background-color: #F7E4E3;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0.5rem;
+  height: 100%;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+#enlace img {
+  width: 3rem;
+}
+#enlace:hover {
+  background-color: #fa6464;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #7a4d4c;
+  font-family: "Gruppo", cursive;
+}
+
+body {
+  background-color: #BF0606;
+  width: 100vw;
 }
 
 section {
@@ -68,30 +65,74 @@ section .enlaces {
 }
 section .enlaces a {
   text-decoration: none;
+  overflow: hidden;
 }
 section .enlaces .linkedin {
   grid-row: 1/3;
   grid-column: 1/2;
+  border-radius: 0 1rem 1rem 0;
 }
 section .enlaces .github {
   grid-column: 2/3;
   grid-row: 2/4;
+  border-radius: 1rem 0 0 1rem;
 }
 section .enlaces .instagram {
   grid-row: 3/5;
   grid-column: 1/2;
+  border-radius: 0 1rem 1rem 0;
 }
 section .enlaces .twitter {
   grid-row: 4/6;
   grid-column: 2/3;
+  border-radius: 1rem 0 0 1rem;
 }
 section .enlaces .youtube {
   grid-row: 5/7;
   grid-column: 1/2;
+  border-radius: 0 1rem 1rem 0;
 }
 section .enlaces .spotify {
   grid-row: 6/8;
   grid-column: 2/3;
+  border-radius: 1rem 0 0 1rem;
+}
+
+@media (min-width: 1024px) {
+  nav.enlaces {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 3rem);
+  }
+  nav.enlaces .linkedin {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  nav.enlaces .github {
+    grid-column: 2/3;
+    grid-row: 2/4;
+    border-radius: 1rem;
+  }
+  nav.enlaces .instagram {
+    grid-column: 3/4;
+    grid-row: 1/3;
+    border-radius: 1rem 0 0 1rem;
+  }
+  nav.enlaces .twitter {
+    grid-column: 1/2;
+    grid-row: 3/5;
+    border-radius: 0 1rem 1rem 0;
+  }
+  nav.enlaces .youtube {
+    grid-column: 2/3;
+    grid-row: 4/6;
+    border-radius: 1rem;
+  }
+  nav.enlaces .spotify {
+    grid-column: 3/4;
+    grid-row: 3/5;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
