--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -1,31 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: #7a4d4c;
+    font-family: 'Gruppo', cursive;
 }
 
 body {
     background-color: #BF0606;
     width: 100vw;
-}
-
-header {
-    width: 100%;
-    height: 6.5rem;
-    background-color: #F7E4E3;
-    position: relative;
-    padding: 1rem 0 0 0;
-    margin: 0 0 5rem 0;
-
-    img {
-        position: absolute;
-        width: 10rem;
-        height: 10rem;
-        border-radius: 50%;
-        left: 50%;
-        transform: translateX(-50%);
-    }
 }
 
 
@@ -48,36 +33,86 @@ section {
 
         a {
             text-decoration: none;
+            overflow: hidden;
         }
 
         .linkedin {
             grid-row: 1 / 3;
             grid-column: 1 / 2;
+            border-radius: 0 1rem 1rem 0;
         }
-
+        
         .github {
             grid-column: 2 / 3;
             grid-row: 2 / 4;
+            border-radius: 1rem 0 0 1rem;
         }
-
+        
         .instagram {
             grid-row: 3 / 5;
             grid-column: 1 / 2;
+            border-radius: 0 1rem 1rem 0;
         }
-
+        
         .twitter {
             grid-row: 4 / 6;
             grid-column: 2 / 3;
+            border-radius: 1rem 0 0 1rem;
         }
-
+        
         .youtube {
             grid-row: 5 / 7;
             grid-column: 1 / 2;
+            border-radius: 0 1rem 1rem 0;
         }
-
+        
         .spotify {
             grid-row: 6 / 8;
             grid-column: 2 / 3;
+            border-radius: 1rem 0 0 1rem;
+        }
+    }
+}
+
+@media(min-width: 1024px) {
+    nav.enlaces {
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, 3rem);
+        
+        .linkedin {
+            grid-column: 1 / 2;
+            grid-row: 1 / 3;
+        }
+        
+        .github {
+            grid-column: 2 / 3;
+            grid-row: 2 / 4;
+            border-radius: 1rem;
+        }
+        
+        .instagram {
+            grid-column: 3 / 4;
+            grid-row: 1 / 3;
+            border-radius: 1rem 0 0 1rem;
+        }
+        
+        .twitter {
+            grid-column: 1 / 2;
+            grid-row: 3 / 5;
+            border-radius: 0 1rem 1rem 0;
+        }
+        
+        .youtube {
+            grid-column: 2 / 3;
+            grid-row: 4 / 6;
+            border-radius: 1rem;
+        }
+
+        .spotify {
+            grid-column: 3 / 4;
+            grid-row: 3 / 5;
         }
     }
 }
