--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,14 @@ header img {
   background-color: #fa6464;
 }
 
+@media (min-width: 1024px) {
+  #enlace {
+    font-size: 2rem;
+  }
+  #enlace img {
+    width: 4rem;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -99,6 +107,9 @@ section .enlaces .spotify {
 }
 
 @media (min-width: 1024px) {
+  section h1 {
+    font-size: 2.6rem;
+  }
   nav.enlaces {
     display: grid;
     gap: 1rem;
