--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -34,3 +34,14 @@ header {
         background-color: lighten($color: #BF0606, $amount: 30%);
     }
 }
+
+
+@media(min-width: 1024px) {
+    #enlace {
+        font-size: 2rem;
+
+        img {
+            width: 4rem;
+        }
+    }
+}
