--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -75,6 +75,12 @@ section {
 }
 
 @media(min-width: 1024px) {
+section {
+    h1 {
+        font-size: 2.6rem;
+    }
+}
+
     nav.enlaces {
         display: grid;
         gap: 1rem;
